# github-personal-assistant

./: .gitignore  ACP_ANALYSIS_INDEX.md  ACP_QUICK_REFERENCE.md  ACP_RUST_SDK_DEEPDIVE.md  ACP_USAGE_PATTERNS.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-pages.yml  release-cli.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: config.ts  db.ts  index.ts
apps/api/src/lib/: auth.ts
apps/api/src/routes/: attachments.ts  auth.ts  chat.ts  copilot.ts  health.ts  models.ts  projects.ts  threads.ts
apps/api/src/services/: copilot.ts  ragflow.ts  retrieval.ts
apps/api/src/store/: attachment-store.ts  auth-store.ts  copilot-preferences-store.ts  project-store.ts  thread-store.ts
apps/client/: .gitignore  app.config.ts  app.json  eas.json  package.json  tsconfig.build.json  tsconfig.json
apps/client/public/: index.html  manifest.webmanifest  styles.css
apps/client/scripts/: build.mjs  dev.mjs
apps/client/src/: app.tsx  main.tsx
apps/client/src/app/: index.tsx
apps/client/src/components/: canvas-editor.tsx  canvas-pane.tsx  message-bubble.tsx
apps/client/src/lib/: api-config.ts  api.ts  pwa-updates.ts  token-storage.ts  types.ts  workspace-store.ts
apps/client/src/providers/: auth-provider.tsx
apps/client/src/types/: esm-sh.d.ts
apps/daemon/: Cargo.toml  build.rs
apps/daemon/migration/: Cargo.toml
apps/daemon/migration/src/: lib.rs  m20260316_000001_initial_schema.rs  m20260318_000002_workspace_metadata.rs  m20260318_000003_canvas_artifacts.rs
apps/daemon/sql/: schema.sql
apps/daemon/src/: auth_middleware.rs  config.rs  db.rs  error.rs  main.rs  remote_access.rs  runtime.rs  service.rs  state.rs  ui_deploy.rs
apps/daemon/src/copilot/: acp_client.rs  mod.rs  sdk_client.rs  types.rs
apps/daemon/src/db/: entities.rs
apps/daemon/src/routes/: attachments.rs  auth.rs  canvases.rs  chat.rs  copilot_routes.rs  health.rs  mod.rs  models.rs  projects.rs  threads.rs
apps/daemon/src/store/: attachment_store.rs  auth_store.rs  canvas_store.rs  mod.rs  preferences_store.rs  project_store.rs  thread_store.rs  workspace_store.rs
patches/: vscode-jsonrpc@8.2.1.patch
projects/acp-sdk-research/: ACP_SDK_ANALYSIS_README.md  ACP_TYPES_REFERENCE.md
