[package]
name = "gpa-daemon"
version = "0.1.0"
edition = "2021"
default-run = "gcpa"

[[bin]]
name = "gcpa"
path = "src/main.rs"


[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
futures = "0.3"
tokio-stream = "0.1"
tracing-appender = "0.2"
