[package]
name = "continuum-daemon"
version = "0.2.4"
edition = "2021"
license = "Apache-2.0"
default-run = "continuum"
build = "build.rs"

[workspace]
members = ["migration"]

[[bin]]
name = "continuum"
path = "src/main.rs"


[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
migration = { path = "migration" }
sea-orm = { version = "1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
futures = "0.3"
tokio-stream = "0.1"
tracing-appender = "0.2"
base64 = "0.22"
flate2 = "1"
include_dir = "0.7"
mime_guess = "2"
semver = "1"
self-replace = "1"
tar = "0.4"
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
